# tinygl-cpp

./: .gitignore  .gitignore.swp  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp  shapes.cpp  sprites.cpp  tinygl-cpp.h
.github/workflows/: cmake-linux.yml  cmake-windows.yml  cmake.yml
docs/: index.html
docs/html/: annotated.html  annotated_dup.js  classes.html  classtinygl_1_1_window-members.html  classtinygl_1_1_window.html  classtinygl_1_1_window.js  dir_49e56c817e5e54854c35e136979f97ca.html  files.html  files_dup.js  functions.html  functions_func.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  start.html  tinygl-cpp_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js
